Import of DMAKI/Data-Visitor-Encode-0.02 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.02.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes
 =======
 
+0.02 - 01 Feb 2006
+  - Fixed stupid bug where Data::Visitor::Encode wasn't actually
+    visiting child nodes. 
+  - Fixed tests accordingly
+
 0.01 - 13 Dec 2006
   - Initial release.
