Import of DMAKI/Data-Visitor-Encode-0.04 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.04
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.04.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes
 =======
 
+0.04 - 28 Mar 2007
+  - Return globs as-is
+
 0.03 - 28 Mar 2007
   - Visit objects properly, too. Requires Scalar::Util.
 
