Import of DMAKI/Data-Visitor-Encode-0.05 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.05.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes
 =======
 
+0.05 - 16 Apr 2007
+  - Properly handle blessed scalar refs (like URI)
+
 0.04 - 28 Mar 2007
   - Return globs as-is
 
