Import of DMAKI/Data-Visitor-Encode-0.06 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.06.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes
 =======
 
+0.06 - 17 Apr 2007
+  - No code change, just kwalitee related fixes
+
 0.05 - 16 Apr 2007
   - Properly handle blessed scalar refs (like URI)
 
