Import of DMAKI/Data-Visitor-Encode-0.08 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.08
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.08.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes
 =======
 
+0.08 - 07 May 2007
+  - Add h2z() and z2h()
+
 0.07 - 03 May 2007
   - Add decode_utf8() and encode_utf8()
   - chmod a-x Makefile.PL for kwalitee
