Import of DMAKI/Data-Visitor-Encode-0.09000 from CPAN.
gitpan-cpan-distribution: Data-Visitor-Encode
gitpan-cpan-version:      0.09000
gitpan-cpan-path:         DMAKI/Data-Visitor-Encode-0.09000.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Changes
 =======
 
+0.09000 - 11 Nov 2007
+  - Allow calling methods without instantiating a Data::Visitor::Encode
+    object. Now you can do Data::Visitor::Encode->encode(...) directly
+
 0.08 - 07 May 2007
   - Add h2z() and z2h()
 
